syntax = "proto3";

package pbfoo;

option go_package = "github.com/Hidayathamir/oteltrace/example/pbfoo";

service Example {
    rpc Foo(ReqFoo) returns (ResFoo) {}
}

message ReqFoo {
}

message ResFoo {
    string trace_id = 1;
}
